Added feature: The ramp turns red when it heats up, as a cue of what is happening (thermal energy absorbed in ramp).
Fixed: When there is a collision with a wall, this energy currently goes into thermal energy of the object; perhaps it should be kept separately
Fixed: Ramp segments should be treated separately with respect to their thermal energies (for showing as red)
Fixed: Water drops appear as black boxes
Added clear heat button that appears when the ramp heats up
Made ramp turn red when heated
# 1.03.31 (34053) Aug 12, 2009
Removed unused images
Fixed: Selecting "frictionless" shouldn't change the "pause" icon to the "record" icon near the timeline controls
Added zoom in/out buttons for Work/Energy bar chart
Added text symbol Fsum next to the arrow in the control panel area
Fixed: Something invisible near x=0 is blocking mouse input; to reproduce the problem put the block at x=0 and mouse around on the block
Fixed: Creating motion with the object should start recording after pressing "clear" near the timeline controls
Pause on startup/reset, and unpause (and start recording) when the user applies a force
# 1.03.30 (33920) Aug 5, 2009
# 1.03.29 (33918) Aug 5, 2009
Internationalized HTML snippets, one in FreeBodyDiagramNode, one in ObjectSelectionNode
Provided internationalization
Added the ability to step during recording, instead of only during playback
Remove wall and normal work from bar chart
Display wall force when pressing block against the wall
Update colors for Normal force and Wall force
Fixed: Reset all should hide the work energy bar chart
# 1.03.28 (33887) Aug 3, 2009
# 1.03.27 (33885) Aug 3, 2009
Added an application for Forces & Friction
Made the friction coefficients change when the ramp is wet
Made it so the ramp turns blue when it is wet
Added "clear heat" button to work/energy bar chart window
Added support for energy conservation in the frictionless case
Added initial support for energy conservation with friction