@@ -1,7 +1,7 @@
 package edu.colorado.phet.therampscala.swing
 
-
 import java.awt.event.{ActionListener, ActionEvent}
+import javax.swing.JCheckBox
 import scala.swing.CheckBox
 
 class MyCheckBox(text: String, setter: Boolean => Unit, getter: => Boolean, addListener: (() => Unit) => Unit) extends CheckBox(text) {
@@ -11,4 +11,14 @@ class MyCheckBox(text: String, setter: Boolean => Unit, getter: => Boolean, addL
     def actionPerformed(ae: ActionEvent) = setter(peer.isSelected)
   });
   def update() = peer.setSelected(getter)
+}
+
+//version without wrapper in case it's easier to use
+class MyJCheckBox(text: String, setter: Boolean => Unit, getter: => Boolean, addListener: (() => Unit) => Unit) extends JCheckBox(text) {
+  addListener(update)
+  update()
+  addActionListener(new ActionListener() {
+    def actionPerformed(ae: ActionEvent) = setter(isSelected)
+  });
+  def update() = setSelected(getter)
 }
